add function to add up the total score and display it on the page

--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
         <h1>How greedy are you? Let's play!</h1>
       </div>
       <h1>Pig Dice</h1>
+      <h2>User Total</h2>
+      <br>
         <div id = "userTotal"></div>
         <div class = row>
           <div class = "col-lg-6">
             <button type="click" class="btn btn-success" id="rollButton">Roll</button>
           </div>
+      <br>
           <div class= "col-lg-6">
             <button type="click" class="btn btn-warning" id="holdButton">Hold</button>
           </div>
         </div>
+      <br>
+        <h2>User Status</h2>
         <div id = "userStatus"></div>
 </body>
       </div>
