--- a/index.html
+++ b/index.html
@@ -12,27 +12,41 @@
         <!-- <div class = row> -->
       <div class="jumbotron">
         <h1>How greedy are you? Let's play!</h1>
-        <h2> "Pig Dice"</h1>
+        <h2> "Pig Dice"</h2>
       </div>
-      <div class = row>
-      <h2 class="col-md-4">User 1 Total</h2>
-      <h2 class="col-md-4">User 2 Total</h2>
-
-      <br>
+      <div class = "row">
+        <!-- <div class = "well"> -->
+      <div class="col-md-6">
+        <h2>User 1 Total</h2>
         <div id = "userTotal"></div>
-        </div>
-          <!-- <div class = "col-md-6"> -->
-            <button type="click" class="btn btn-success" id="rollButton">Roll</button>
+        <h3>User 1 Status</h2>
+        <div id = "user1Status"></div>
+      <!-- <h2 class="col-md-4">User 2 Total</h2> -->
 
-          <!-- <div class= "col-md-6"> -->
-            <button type="click" class="btn btn-warning" id="holdButton">Hold</button>
+        <!-- </div> -->
+      </div>
+      <div class="col-md-6">
+        <h2>User 2 Total</h2>
+        <div id = "user2Total"></div>
+        <h3>User 2 Status</h2>
+        <div id = "user2Status"></div>
+          <!-- <div class = "col-md-6"> -->
+          </div>
             <!-- </div> -->
-            <h3>User Status</h2>
-            <div id = "userStatus"></div>
-            <h3>User 2 Status</h2>
-            <div id = "user2Status"></div>
+            <!-- <h3>User Status</h2>
+            <div id = "userStatus"></div> -->
+            <!-- <h3>User 2 Status</h2>
+            <div id = "user2Status"></div> -->
             <!-- </div> -->
           </div>
+          <div class="well">
+          <button type="click" class="btn btn-success" id="rollButton">Roll</button>
+          <button type="click" class="btn btn-warning" id="holdButton">Hold</button>
+
+          <button type="click" class="btn btn-success" id="rollButton2">Roll</button>
+          <button type="click" class="btn btn-warning" id="holdButton2">Hold</button>
+        </div>
+
       <br>
   </body>
 </html>
