display the dice number

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
           <button type="click" class="btn btn-success" id="rollButton2">Roll</button>
           <button type="click" class="btn btn-warning" id="holdButton2">Hold</button>
         </div>
+        <h1>Roll Status</h1>
+        <div id = "rollStatus"></div>
+
+
 
       <br>
   </body>
